--- a/homework.ipynb
+++ b/homework.ipynb
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "cP4rScqMGuze"
       },
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "S73zAB2vxDZs"
       },
@@ -125,7 +125,27 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = ..."
+        "p1 = len(q1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "44"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "p1"
       ]
     },
     {
@@ -151,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "KQiLAQuKW9Ce"
       },
@@ -164,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "2tXbdHcbXS_7"
       },
@@ -172,14 +192,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = ..."
+        "p2 = q2.split()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['35,Hello,red,153.2,n/a,true,true,true,false,154,92,2024-09-01,2020-03-06,confirmed,n/a,F,100,100']"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2"
       ]
@@ -197,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "1CUU_Td7DdnH"
       },
@@ -206,23 +237,45 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(joke):\n",
-        "    ..."
+        "    return \"silly\" in joke and len(joke) <= 50"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this is a silly joke\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this joke is so boring because it drones on and on and on and on forever as if noone is really reading this amirite?\")"
       ]
@@ -241,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -256,7 +309,7 @@
               "129412"
             ]
           },
-          "execution_count": null,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -267,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -279,14 +332,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'🦄'"
             ]
           },
-          "execution_count": null,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -308,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "8onkYe3bEFmd"
       },
@@ -316,14 +366,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "p4 = chr(128200) + chr(128201) + chr(128202)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'📈📉📊'"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p4"
       ]
@@ -341,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "iezT1WYDGclf"
       },
@@ -354,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "K0KoZch7Gp1w"
       },
@@ -362,14 +423,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p5 = ..."
+        "p5 = q5.replace(\"jumped over\", \"greeted\").replace(\"lazy\", \"friendly\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'The quick brown fox greeted the friendly brown dog.'"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p5"
       ]
@@ -389,7 +461,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
@@ -398,23 +479,54 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(filename):\n",
-        "    ..."
+        "    with open(filename, newline='') as f:\n",
+        "        reader = csv.DictReader(f, delimiter='\\t')\n",
+        "        for row in reader:\n",
+        "            parse_row = {}\n",
+        "            for key, value in row.items():\n",
+        "                try:\n",
+        "                    parse_row[key] = int(value)\n",
+        "                except:\n",
+        "                    parse_row[key] = None\n",
+        "            yield parse_row"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 4}]"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p6(\"data6_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 45,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': None, 'b': None, 'c': None}]"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p6(\"data6_b.tsv\"))"
       ]
@@ -446,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 51,
       "metadata": {
         "id": "5-wvb6MGMuUT"
       },
@@ -455,23 +567,57 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(filename):\n",
-        "    ..."
+        "    with open(filename, newline='') as f:\n",
+        "        reader = csv.DictReader(f, delimiter='\\t')\n",
+        "        for row in reader:\n",
+        "            parse_row = {}\n",
+        "            finagled = False\n",
+        "            for key, value in row.items():\n",
+        "                try:\n",
+        "                    parse_row[key] = int(value)\n",
+        "                except:\n",
+        "                    parse_row[key] = 3\n",
+        "                    finagled = True\n",
+        "            parse_row[\"finagled\"] = finagled\n",
+        "            yield parse_row"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 4, 'finagled': False}]"
+            ]
+          },
+          "execution_count": 52,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 3, 'c': 3, 'finagled': True}]"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_b.tsv\"))"
       ]
@@ -491,7 +637,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
       "metadata": {
         "id": "YIN0GfynNVS9"
       },
@@ -500,7 +655,14 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p8(input_filename, output_filename, column_names):\n",
-        "    ..."
+        "    with open(input_filename, newline='') as infile:\n",
+        "        reader = csv.DictReader(infile, delimiter='\\t')\n",
+        "        with open(output_filename, 'w', newline='') as outfile:\n",
+        "            writer = csv.DictWriter(outfile, fieldnames=column_names, delimiter='\\t')\n",
+        "            writer.writeheader()\n",
+        "            for row in reader:\n",
+        "                new_row = {col: row[col] for col in column_names}\n",
+        "                writer.writerow(new_row)"
       ]
     },
     {
@@ -514,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 71,
       "metadata": {
         "id": "Tr1U2MgwNaqN"
       },
@@ -526,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 72,
       "metadata": {
         "id": "KIn9DFPaNoZl"
       },
@@ -535,7 +697,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "file not found\n"
+            "height\twidth\tcolor\n",
+            "45\t23\tred\n",
+            "62\t15\tblue\n",
+            "23\t123\tgreen\n"
           ]
         }
       ],
@@ -1196,7 +1361,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
