--- a/homework.ipynb
+++ b/homework.ipynb
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 76,
       "metadata": {
         "id": "sGqg9EJ5H-8V"
       },
@@ -840,15 +840,18 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(filename):\n",
-        "        with open(filename, newline='') as f:\n",
-        "            reader = csv.reader(f, delimiter='\\t')\n",
-        "            next(reader)\n",
-        "            return any(any(cell.strip() for cell in row) for row in reader)"
+        "       with open(filename, newline='') as f:\n",
+        "        reader = csv.reader(f, delimiter='\\t')\n",
+        "        try:\n",
+        "            next(reader)  \n",
+        "            return True   \n",
+        "        except StopIteration:\n",
+        "            return False  "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -857,7 +860,7 @@
               "True"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -868,16 +871,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -918,7 +921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 79,
       "metadata": {
         "id": "8bibT3VpZEKq"
       },
@@ -926,12 +929,12 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p11 = f\"Number of visits {q11a:,}, average visit revenue = {q11b:.2f} dollars per visit\""
+        "p11 = f\"The site had {q11a:,} visits, with an average revenue of {q11b:.2f} dollars per visit.\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 80,
       "metadata": {
         "id": "QENJ6s5lZMpg"
       },
@@ -939,10 +942,10 @@
         {
           "data": {
             "text/plain": [
-              "'Number of visits 5,125, average visit revenue = 3.51 dollars per visit'"
+              "'The site had 5,125 visits, with an average revenue of 3.51 dollars per visit.'"
             ]
           },
-          "execution_count": 73,
+          "execution_count": 80,
           "metadata": {},
           "output_type": "execute_result"
         }
